<?xml version="1.0" char_encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>java-new-features</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <!-- 测试JavaFx New Features -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>

                    <compilerArgs>
                        <!-- "add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED"
                        is needed to get access to `@ReservedStackAccess` in `ReservedStackAccess` -->
                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>

                        <!-- enable preview language features like switch expressions -->
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>